ecmascript/parser/tests/test262-error-references/fail/6aeff33ceda72475.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/6aeff33ceda72475.js:1:17
  |
1 | class A extends yield B { }
  |                 ^^^^^

